--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <script src="javascript/script.js"></script>
 </head>
 
 <body>
     <div>
-        <p>12.50</p>
-        <button class="gray-button">AC</button>
-        <button class="gray-button">+/-</button>
-        <button class="blue-button">/</button>
-        <button class="blue-button">*</button>
-        <button class="black-button">7</button>
-        <button class="black-button">8</button>
-        <button class="black-button">9</button>
-        <button class="blue-button">-</button>
-        <button class="black-button">4</button>
-        <button class="black-button">5</button>
-        <button class="black-button">6</button>
-        <button class="blue-button">+</button>
-        <button class="black-button">1</button>
-        <button class="black-button">2</button>
-        <button class="black-button">3</button>
-        <button class="equal-button equal">=</button>
-        <button class="black-button zero">0</button>
-        <button class="black-button">.</button>
+        <input class="display">
+        <button class="gray-button" onclick="limparTela()">AC</button>
+        <button class="gray-button" onclick="inverterNumero()">+/-</button>
+        <button class="blue-button" onclick="adicionarCaracter('/')">/</button>
+        <button class="blue-button" onclick="adicionarCaracter('*')">*</button>
+        <button class="black-button" onclick="adicionarCaracter('7')">7</button>
+        <button class="black-button" onclick="adicionarCaracter('8')">8</button>
+        <button class="black-button" onclick="adicionarCaracter('9')">9</button>
+        <button class="blue-button" onclick="adicionarCaracter('-')">-</button>
+        <button class="black-button" onclick="adicionarCaracter('4')">4</button>
+        <button class="black-button" onclick="adicionarCaracter('5')">5</button>
+        <button class="black-button" onclick="adicionarCaracter('6')">6</button>
+        <button class="blue-button" onclick="adicionarCaracter('+')">+</button>
+        <button class="black-button" onclick="adicionarCaracter('1')">1</button>
+        <button class="black-button" onclick="adicionarCaracter('2')">2</button>
+        <button class="black-button" onclick="adicionarCaracter('3')">3</button>
+        <button class="equal-button equal" onclick="calcular()">=</button>
+        <button class="black-button zero" onclick="adicionarCaracter('0')">0</button>
+        <button class="black-button" onclick="adicionarCaracter('.')">.</button>
     </div>
 </body>
 
