--- a/index.html
+++ b/index.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
-    <link rel="stylesheet" href="estilos/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <script src="javascript/script.js"></script>
 </head>
-
 <body>
-    <div>
-        <input class="display">
-        <button class="gray-button" onclick="limparTela()">AC</button>
-        <button class="gray-button" onclick="inverterNumero()">+/-</button>
-        <button class="blue-button" onclick="adicionarCaracter('/')">/</button>
-        <button class="blue-button" onclick="adicionarCaracter('*')">*</button>
-        <button class="black-button" onclick="adicionarCaracter('7')">7</button>
-        <button class="black-button" onclick="adicionarCaracter('8')">8</button>
-        <button class="black-button" onclick="adicionarCaracter('9')">9</button>
-        <button class="blue-button" onclick="adicionarCaracter('-')">-</button>
-        <button class="black-button" onclick="adicionarCaracter('4')">4</button>
-        <button class="black-button" onclick="adicionarCaracter('5')">5</button>
-        <button class="black-button" onclick="adicionarCaracter('6')">6</button>
-        <button class="blue-button" onclick="adicionarCaracter('+')">+</button>
-        <button class="black-button" onclick="adicionarCaracter('1')">1</button>
-        <button class="black-button" onclick="adicionarCaracter('2')">2</button>
-        <button class="black-button" onclick="adicionarCaracter('3')">3</button>
-        <button class="equal-button equal" onclick="calcular()">=</button>
-        <button class="black-button zero" onclick="adicionarCaracter('0')">0</button>
-        <button class="black-button" onclick="adicionarCaracter('.')">.</button>
-    </div>
+    <main data-theme="dark">
+        <header class="flex align-center justify-between">
+            <h1>Calculadora</h1>
+            <button id="themeSwitcher">Dark/Light</button>
+        </header>
+
+        <input type="text" id="input">
+
+        <div id="keys">
+          <button id="clear">C</button>
+          <button class="charKey" data-value=" ( ">(</button>
+          <button class="charKey" data-value=" ) ">)</button>
+          <button class="charKey" data-value=" / ">/</button>
+          <button class="charKey" data-value="7">7</button>
+          <button class="charKey" data-value="8">8</button>
+          <button class="charKey" data-value="9">9</button>
+          <button class="charKey" data-value=" * ">*</button>
+          <button class="charKey" data-value="4">4</button>
+          <button class="charKey" data-value="5">5</button>
+          <button class="charKey" data-value="6">6</button>
+          <button class="charKey" data-value=" - ">-</button>
+          <button class="charKey" data-value="1">1</button>
+          <button class="charKey" data-value="2">2</button>
+          <button class="charKey" data-value="3">3</button>
+          <button class="charKey" data-value=" + ">+</button>
+          <button class="charKey" data-value="0">0</button>
+          <button class="charKey" data-value=".">.</button>
+          <button class="charKey" data-value=" % ">mod</button>
+          <button id="equal">=</button>
+        </div>
+
+        <section class="flex align-center justify-between">
+            <button id="copyToClipboard">Copy</button>
+            <input type="text" id="result" disabled>
+        </section>
+      </main>
+      <footer>
+          <p id="copy">Created by &copy; <a href="https://linkedin.com/in/thiagocainelli" target="_blank">Thiago Cainelli</a></p>
+      </footer>
 </body>
 
 </html>
